1、Pybrain神经网络通过调参都训练出来了；2、学习numpy的笔记更新
Change-Id: Ice61303e11c0fe9a8d2a737237385a5f8e1ae725

--- a/machine_learning/numpy.ipynb
+++ b/machine_learning/numpy.ipynb
@@ -281,6 +281,242 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  4  9 16]\n",
+      "[1 4 9 4 1]\n",
+      "a [[ 0.5488135   0.71518937  0.60276338]\n",
+      " [ 0.54488318  0.4236548   0.64589411]\n",
+      " [ 0.43758721  0.891773    0.96366276]]\n",
+      "[ 0.71518937  0.54488318  0.64589411]\n",
+      "[[ 0.5488135   0.71518937  0.60276338]\n",
+      " [ 0.54488318  0.4236548   0.64589411]\n",
+      " [ 0.5488135   0.71518937  0.60276338]\n",
+      " [ 0.54488318  0.4236548   0.64589411]]\n",
+      "boolean [ 0.5488135   0.64589411]\n",
+      "(12, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:17: VisibleDeprecationWarning: boolean index did not match indexed array along dimension 0; dimension is 3 but corresponding boolean dimension is 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(5) ** 2\n",
+    "print a\n",
+    "i = [1,2,3,2,1]\n",
+    "print a[i]\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "a = np.random.random((3,3))\n",
+    "print 'a', a\n",
+    "i = [[0,1,1],\n",
+    "     [1,0,2]]\n",
+    "print a[i]\n",
+    "print a[[0,1,0,1]] # 指定需要哪些行\n",
+    "i = np.array([[True,False,False], # 使用和目标array相同shape的bool array，直接指定需要哪些数值\n",
+    "           [False,False,True]], dtype=bool)\n",
+    "print 'boolean', a[i]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]\n",
+      " [16 17 18 19]\n",
+      " [20 21 22 23]]\n",
+      "[[ 0  1  2  3]\n",
+      " [12 13 14 15]\n",
+      " [16 17 18 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(24)\n",
+    "a.shape = 6,-1 # whatever the column count is\n",
+    "print a\n",
+    "print a[np.array([True,False,False,True,True,False]), :] # 注意，这里需要转换成 np.array 进行 index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.  7.  0.]\n",
+      " [ 3.  1.  0.]\n",
+      " [ 1.  3.  3.]]\n",
+      "[ 4.  1.  3.]\n",
+      "equal 8.0 8.0\n",
+      "Ax=b [ 1.17647059  0.47058824 -0.52941176]\n",
+      "solve loss 4.4408920985e-16\n",
+      "inv loss 1.11022302463e-16\n",
+      "eig (array([ 3.        , -2.32182538,  7.32182538]), array([[ 0.        ,  0.72191546, -0.80590655],\n",
+      "       [ 0.        , -0.65197479, -0.38244012],\n",
+      "       [ 1.        ,  0.231877  , -0.45194489]]))\n",
+      "det -51.0\n",
+      "A* [[  3. -21.  -0.]\n",
+      " [ -9.  12.   0.]\n",
+      " [  8.  -5. -17.]]\n",
+      "rank A 3\n",
+      "rank Ab 3\n",
+      "因为rank(A)==rank(Ab)，所以Ax=b有唯一解，Ab可以由A线性表示\n",
+      "det 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# linalg: linear algebra\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "A = np.floor(np.random.random((3,3)) * 10)\n",
+    "print A\n",
+    "print np.diag(A) # 对角元素列表\n",
+    "print 'equal', np.trace(A), np.diag(A).sum() # 对角元素和\n",
+    "\n",
+    "b = np.array((8,4,1))\n",
+    "ans = np.linalg.solve(A, b)\n",
+    "print 'Ax=b', ans\n",
+    "\n",
+    "# 求解方程组的解\n",
+    "print 'solve loss', abs(np.sum(np.dot(A, ans) - b))\n",
+    "\n",
+    "# 逆矩阵\n",
+    "print 'inv loss', abs(np.sum(np.dot(np.linalg.inv(A), A) - np.eye(3)))\n",
+    "\n",
+    "# 特征\n",
+    "print 'eig', np.linalg.eig(A) \n",
+    "\n",
+    "# 行列式（是一个值）\n",
+    "print 'det', np.linalg.det(A)\n",
+    "\n",
+    "# 求解伴随矩阵\n",
+    "print 'A*', np.linalg.det(A) * np.linalg.inv(A)\n",
+    "\n",
+    "# 矩阵的秩rank\n",
+    "print 'rank A', np.linalg.matrix_rank(A)\n",
+    "print 'rank Ab', np.linalg.matrix_rank(np.hstack((A, b.reshape((3,1)))))\n",
+    "print '因为rank(A)==rank(Ab)，所以Ax=b有唯一解，Ab可以由A线性表示'\n",
+    "\n",
+    "A = np.eye(3)\n",
+    "print 'det', np.linalg.det(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  2.  3.] [[ 1.  0.  0.]\n",
+      " [ 0.  1.  0.]\n",
+      " [ 0.  0.  1.]]\n",
+      "\n",
+      "[[ 1.  0.  0.]\n",
+      " [ 0.  2.  0.]\n",
+      " [ 0.  0.  3.]]\n",
+      "[[ 1.  0.  0.]\n",
+      " [ 0.  2.  0.]\n",
+      " [ 0.  0.  3.]]\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 线性代数\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# 特征（特征值和特征向量）eigenvalue\n",
+    "A = np.diag((1,2,3))\n",
+    "eigenvalue, eigenvector = np.linalg.eig(A)\n",
+    "print eigenvalue, eigenvector\n",
+    "print\n",
+    "print np.dot(A, eigenvector)\n",
+    "print eigenvalue * eigenvector\n",
+    "\n",
+    "# 正交矩阵\n",
+    "def is_diagonal_matrix(A):\n",
+    "    return (A.T == np.linalg.inv(A)).all() # 全部都是True\n",
+    "print is_diagonal_matrix(A)\n",
+    "print is_diagonal_matrix(np.eye(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cov [[ 0.33333333 -0.33333333 -0.5       ]\n",
+      " [-0.33333333  1.33333333 -1.        ]\n",
+      " [-0.5        -1.          3.        ]]\n",
+      "var 0.666666666667\n",
+      "mean 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 数理统计\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.diag((1,2,3))\n",
+    "print 'cov', np.cov(A) # 协方差\n",
+    "\n",
+    "A = np.array((1,2,3))\n",
+    "print 'var', np.var(A) # 方差\n",
+    "\n",
+    "print 'mean', np.mean(A) # 均值\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -290,8 +526,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
