测试了工作地的准确率
Change-Id: Ia7e1826eb741fc27a991961d547cdeae3b51cf75

--- a/location_type_classification/nn.ipynb
+++ b/location_type_classification/nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -47,8 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13752 3751\n",
-      "(4675, 48) (9077, 48)\n",
+      "raw data 14681 4680\n",
+      "training & test dataset (10276, 48) (4405, 48)\n",
       "done\n"
      ]
     }
@@ -58,7 +58,7 @@
     "\n",
     "# \n",
     "def load_data():\n",
-    "    filename = \"data_for_training\"\n",
+    "    filename = \"data_for_training.work\"\n",
     "    X_res = []\n",
     "    y_res = []\n",
     "    c1 = 0\n",
@@ -82,17 +82,129 @@
     "    return np.array(X_res, dtype='float64'), np.array(y_res, dtype='int')\n",
     "\n",
     "X, y = load_data()\n",
-    "print len(y), np.sum(y)\n",
+    "print 'raw data', len(y), np.sum(y)\n",
     "\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.66, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "print X_train.shape, X_test.shape\n",
+    "print 'training & test dataset', X_train.shape, X_test.shape\n",
     "\n",
     "print 'done'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 156 layers: 3\n",
+      "time: 0.00309991836548 size: 4405\n",
+      "score of train:test 0.8369015181 0.826560726447\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import neural_network\n",
+    "import time, os, pickle\n",
+    "\n",
+    "def get_clf(use_cache=True):\n",
+    "    filename = \"nn.work.model\"\n",
+    "    if use_cache and os.path.exists(filename):\n",
+    "        print 'cache hit'\n",
+    "        return pickle.loads(open(filename, 'r').read())\n",
+    "    clf = neural_network.MLPClassifier(hidden_layer_sizes=(20,), \n",
+    "                                       activation='relu', \n",
+    "                                       solver='adam', \n",
+    "                                       alpha=0.03,  # 学习速率\n",
+    "                                       batch_size='auto', \n",
+    "                                       learning_rate='constant', \n",
+    "                                       learning_rate_init=0.001, \n",
+    "                                       power_t=0.5, \n",
+    "                                       max_iter=10000, \n",
+    "                                       shuffle=True, \n",
+    "                                       random_state=3,  # 初始状态的随机种子\n",
+    "                                       tol=0.0001, \n",
+    "                                       verbose=False, \n",
+    "                                       warm_start=False, \n",
+    "                                       momentum=0.9,\n",
+    "                                       nesterovs_momentum=True, \n",
+    "                                       early_stopping=False, \n",
+    "                                       validation_fraction=0.1, \n",
+    "                                       beta_1=0.9, \n",
+    "                                       beta_2=0.999, \n",
+    "                                       epsilon=1e-08)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    fout = open(filename, 'w')\n",
+    "    fout.write(pickle.dumps(clf))\n",
+    "    fout.close()\n",
+    "    return clf\n",
+    "\n",
+    "clf = get_clf(False)\n",
+    "\n",
+    "print 'iter:', clf.n_iter_, 'layers:', clf.n_layers_\n",
+    "t1 = time.time()\n",
+    "proba = clf.predict_proba(X_test)[:,1]  # 每个元素都是属于该类别的概率大小\n",
+    "print 'time:', time.time() - t1, 'size:', len(X_test)\n",
+    "\n",
+    "print 'score of train:test', clf.score(X_train, y_train), clf.score(X_test, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 0.0320601463318 size: 4405\n",
+      "0.9980537174 0.845856980704\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=23, \n",
+    "                             criterion='gini', \n",
+    "                             max_depth=None, \n",
+    "                             min_samples_split=2,\n",
+    "                             min_samples_leaf=1, \n",
+    "                             min_weight_fraction_leaf=0.0, \n",
+    "                             max_features='auto', \n",
+    "                             max_leaf_nodes=None, \n",
+    "                             min_impurity_split=1e-07, bootstrap=True, oob_score=False, \n",
+    "                             n_jobs=1, random_state=None, verbose=0, warm_start=False, \n",
+    "                             class_weight=None)\n",
+    "\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "t1 = time.time()\n",
+    "clf.predict(X_test)\n",
+    "print 'time:', time.time() - t1, 'size:', len(X_test)\n",
+    "\n",
+    "print clf.score(X_train, y_train), clf.score(X_test, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -138,67 +250,6 @@
     "\n",
     "print 'done'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iter: 52 layers: 4\n",
-      "time: 0.0122299194336 size: 9077\n",
-      "200.0 0.833796791444 0.801366090118\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn import neural_network\n",
-    "import time\n",
-    "\n",
-    "clf = neural_network.MLPClassifier(hidden_layer_sizes=(49,49), \n",
-    "                                   activation='relu', \n",
-    "                                   solver='adam', \n",
-    "                                   alpha=0.03,  # 学习速率\n",
-    "                                   batch_size='auto', \n",
-    "                                   learning_rate='constant', \n",
-    "                                   learning_rate_init=0.001, \n",
-    "                                   power_t=0.5, \n",
-    "                                   max_iter=10000, \n",
-    "                                   shuffle=True, \n",
-    "                                   random_state=3,  # 初始状态的随机种子\n",
-    "                                   tol=0.0001, \n",
-    "                                   verbose=False, \n",
-    "                                   warm_start=False, \n",
-    "                                   momentum=0.9,\n",
-    "                                   nesterovs_momentum=True, \n",
-    "                                   early_stopping=False, \n",
-    "                                   validation_fraction=0.1, \n",
-    "                                   beta_1=0.9, \n",
-    "                                   beta_2=0.999, \n",
-    "                                   epsilon=1e-08)\n",
-    "clf.fit(X_train, y_train)\n",
-    "print 'iter:', clf.n_iter_, 'layers:', clf.n_layers_\n",
-    "\n",
-    "t1 = time.time()\n",
-    "clf.predict(X_test)\n",
-    "print 'time:', time.time() - t1, 'size:', len(X_test)\n",
-    "\n",
-    "print param, clf.score(X_train, y_train), clf.score(X_test, y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
