--- a/machine_learning/numpy.ipynb
+++ b/machine_learning/numpy.ipynb
@@ -417,7 +417,7 @@
     "# 逆矩阵\n",
     "print 'inv loss', abs(np.sum(np.dot(np.linalg.inv(A), A) - np.eye(3)))\n",
     "\n",
-    "# 特征\n",
+    "# 特征 eigen\n",
     "print 'eig', np.linalg.eig(A) \n",
     "\n",
     "# 行列式（是一个值）\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -446,18 +446,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.  2.  3.] [[ 1.  0.  0.]\n",
+      "eign value: [ 1.  2.  3.]\n",
+      "eign vector:\n",
+      "[[ 1.  0.  0.]\n",
       " [ 0.  1.  0.]\n",
       " [ 0.  0.  1.]]\n",
-      "\n",
-      "[[ 1.  0.  0.]\n",
-      " [ 0.  2.  0.]\n",
-      " [ 0.  0.  3.]]\n",
-      "[[ 1.  0.  0.]\n",
-      " [ 0.  2.  0.]\n",
-      " [ 0.  0.  3.]]\n",
-      "False\n",
-      "True\n"
+      "left value: [[  4.   0.   0.]\n",
+      " [  0.   8.   0.]\n",
+      " [  0.   0.  12.]]\n",
+      "right value: [[  4.   0.   0.]\n",
+      " [  0.   8.   0.]\n",
+      " [  0.   0.  12.]]\n",
+      "is diagonal matrix: False\n",
+      "is diagonal matrix: True\n"
      ]
     }
    ],
@@ -469,16 +470,18 @@
     "# 特征（特征值和特征向量）eigenvalue\n",
     "A = np.diag((1,2,3))\n",
     "eigenvalue, eigenvector = np.linalg.eig(A)\n",
-    "print eigenvalue, eigenvector\n",
-    "print\n",
-    "print np.dot(A, eigenvector)\n",
-    "print eigenvalue * eigenvector\n",
+    "print 'eign value:', eigenvalue\n",
+    "print 'eign vector:\\n', eigenvector\n",
+    "\n",
+    "eigenvector *= 4\n",
+    "print 'left value:', np.dot(A, eigenvector)\n",
+    "print 'right value:', eigenvalue * eigenvector\n",
     "\n",
     "# 正交矩阵\n",
     "def is_diagonal_matrix(A):\n",
     "    return (A.T == np.linalg.inv(A)).all() # 全部都是True\n",
-    "print is_diagonal_matrix(A)\n",
-    "print is_diagonal_matrix(np.eye(2))\n"
+    "print 'is diagonal matrix:', is_diagonal_matrix(A)\n",
+    "print 'is diagonal matrix:', is_diagonal_matrix(np.eye(2))\n"
    ]
   },
   {
@@ -513,6 +516,37 @@
     "print 'mean', np.mean(A) # 均值\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2]\n",
+      " [1]]\n",
+      "[[3]\n",
+      " [2]]\n",
+      "[[5]\n",
+      " [3]]\n",
+      "[[8]\n",
+      " [5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fibonacci_progression_matrix = np.array([[1, 1], [1, 0]])\n",
+    "vec = np.array([[1, 1]]).T\n",
+    "for i in range(4):\n",
+    "    vec = np.dot(fibonacci_progression_matrix, vec)\n",
+    "    print vec\n",
+    "    "
    ]
   },
   {
